--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
         <img class="top2" src="assets/peralta-logo.png" />
       </div>
 
+<div class="threeCircles">
+  <span class="redDot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+</div>
+
+
+
+
+
+
       <div class="articles">
         <div id="articleleft" class="articles2">
           <h2>Tony Hawk foundation raises big money at celebrity fundraiser</h2>
@@ -42,6 +53,8 @@
             For Skateparks benfit Presented by SLS Hotel & Casino Las Vegas on
             Saturday at the Green Acres Estate in Beverly Hills.
           </p>
+          <a id="articletext" href="https://"#>[Read More]</a>
+
         </div>
         <div class="articles2">
           <h2>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h2>
@@ -52,6 +65,7 @@
             his love of the open skateboarding community and how the unique
             environments it plays in drive the creation of new tricks--foster..
           </p>
+          <a id="articletext" href="https://"#">[Read More]</a>
         </div>
 
         <div id="article-right" class="articles2">
@@ -64,6 +78,8 @@
             with Ray Barbee, one of the smoothest guys to ever step on a
             skatebaord and Chris' childhood idol...
           </p>
+          <a id="articletext" href="https://"#">[Read More]</a>
+
         </div>
       </div>
 
